--- a/Earthquake Tracker/Earthquake Tracker/Base.lproj/Main.storyboard
+++ b/Earthquake Tracker/Earthquake Tracker/Base.lproj/Main.storyboard
@@ -15,16 +15,81 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TGG-2r-KmP">
+                                <rect key="frame" x="175" y="428.5" width="64" height="39"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" systemColor="labelColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bQS-Cz-fRf"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Xv-BH-7rH">
+                                <rect key="frame" x="15" y="59" width="384" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="hBg-5M-q07"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TGG-2r-KmP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2ON-UJ-5dX"/>
+                            <constraint firstItem="7Xv-BH-7rH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="3Yh-hY-0GA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7Xv-BH-7rH" secondAttribute="trailing" constant="15" id="Bry-6L-iCZ"/>
+                            <constraint firstItem="TGG-2r-KmP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RtO-Ya-Y7n"/>
+                            <constraint firstItem="7Xv-BH-7rH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="iBy-gw-cis"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="resultLabel" destination="7Xv-BH-7rH" id="J3B-Ie-GLT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-177" y="53"/>
+            <point key="canvasLocation" x="-178.2608695652174" y="52.901785714285715"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="rg1-6A-hpb">
+            <objects>
+                <viewController storyboardIdentifier="TableViewController" id="85G-vD-ef4" customClass="TableViewController" customModule="Earthquake_Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="00p-zL-ef0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q7N-SX-fQB">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mVF-fL-FZc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mVF-fL-FZc" firstAttribute="bottom" secondItem="q7N-SX-fQB" secondAttribute="bottom" id="1fo-Sp-beG"/>
+                            <constraint firstItem="q7N-SX-fQB" firstAttribute="top" secondItem="mVF-fL-FZc" secondAttribute="top" id="L3p-l9-FY6"/>
+                            <constraint firstItem="q7N-SX-fQB" firstAttribute="leading" secondItem="mVF-fL-FZc" secondAttribute="leading" id="SyM-CR-x2V"/>
+                            <constraint firstItem="mVF-fL-FZc" firstAttribute="trailing" secondItem="q7N-SX-fQB" secondAttribute="trailing" id="dP2-su-MO0"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="q7N-SX-fQB" id="mS1-Aj-G1a"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kbJ-hz-KrO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="584" y="53"/>
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
