--- a/Harry Potter Wiki/Base.lproj/Main.storyboard
+++ b/Harry Potter Wiki/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home Page-->
+        <!--Harry Potter Wiki-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Harry_Potter_Wiki" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,22 +16,98 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rg7-2B-Ss9">
-                                <rect key="frame" x="122" y="241" width="170" height="89"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rg7-2B-Ss9">
+                                <rect key="frame" x="20" y="290" width="170" height="90"/>
+                                <color key="backgroundColor" red="0.1182549521" green="0.26182216409999998" blue="0.28520590070000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="XqH-Lm-Xs7"/>
+                                    <constraint firstAttribute="width" constant="170" id="xbH-pi-TDI"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="Characters">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="didTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KJz-17-yXe"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N85-32-4Pi">
+                                <rect key="frame" x="224" y="290" width="170" height="90"/>
+                                <color key="backgroundColor" red="0.1182549521" green="0.26182216409999998" blue="0.28520590070000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="6hn-bk-mHM"/>
+                                    <constraint firstAttribute="width" constant="170" id="unE-U3-YeB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <state key="normal" title="Spells">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="didTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xhj-ky-s6S"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5kZ-D3-kYX" userLabel="Elixirs">
+                                <rect key="frame" x="20" y="414" width="170" height="90"/>
+                                <color key="backgroundColor" red="0.1182549521" green="0.26182216409999998" blue="0.28520590070000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="170" id="byJ-fc-dX6"/>
+                                    <constraint firstAttribute="height" constant="90" id="pKV-1L-Xtu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <state key="normal" title="Elixirs">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="didTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ao3-nX-Gle"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bgd-Ye-xF9" userLabel="Post a Feedback">
+                                <rect key="frame" x="224" y="414" width="170" height="90"/>
+                                <color key="backgroundColor" red="0.1182549521" green="0.26182216409999998" blue="0.28520590070000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="jtf-lI-thu"/>
+                                    <constraint firstAttribute="width" constant="170" id="qmI-xj-Ds3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <state key="normal" title="Post a Feedback">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.23137254900000001" green="0.20392156859999999" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="N85-32-4Pi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="2e0-eH-jPO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="N85-32-4Pi" secondAttribute="trailing" constant="20" id="7Q8-Dc-2mA"/>
+                            <constraint firstItem="Bgd-Ye-xF9" firstAttribute="top" secondItem="Rg7-2B-Ss9" secondAttribute="bottom" constant="34" id="ESP-oe-MhS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bgd-Ye-xF9" secondAttribute="trailing" constant="20" id="Kfn-Xx-NKv"/>
+                            <constraint firstItem="Rg7-2B-Ss9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="OGY-NU-7cK"/>
+                            <constraint firstItem="5kZ-D3-kYX" firstAttribute="top" secondItem="Rg7-2B-Ss9" secondAttribute="bottom" constant="34" id="Qow-zX-0XY"/>
+                            <constraint firstItem="5kZ-D3-kYX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="nML-OT-EBx"/>
+                            <constraint firstItem="Rg7-2B-Ss9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="qgb-sv-XKY"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Home Page" id="Qso-Jj-bLj">
+                    <navigationItem key="navigationItem" title="Harry Potter Wiki" id="Qso-Jj-bLj">
                         <barButtonItem key="backBarButtonItem" title="Home" id="8IM-5H-Vsm"/>
                     </navigationItem>
                 </viewController>
@@ -77,10 +153,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="JSw-xJ-xLw">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.45882352941176469" green="0.094117647058823528" blue="0.027450980392156862" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
