--- a/Harry Potter Wiki/SpellsCell.xib
+++ b/Harry Potter Wiki/SpellsCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="421" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magic-wand" translatesAutoresizingMaskIntoConstraints="NO" id="Dad-aw-os1">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wand" translatesAutoresizingMaskIntoConstraints="NO" id="Dad-aw-os1">
                         <rect key="frame" x="10" y="25" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="ehp-2E-5Sf"/>
@@ -29,7 +29,7 @@
                             <constraint firstAttribute="height" constant="20" id="7yb-Go-SX9"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="48v-cM-RH2" userLabel="Spell Description Label">
@@ -38,7 +38,7 @@
                             <constraint firstAttribute="height" constant="70" id="crY-do-HsQ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -56,12 +56,13 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="entryDescriptionLabel" destination="48v-cM-RH2" id="n6n-G9-xte"/>
+                <outlet property="entryImage" destination="Dad-aw-os1" id="ak8-Kp-R59"/>
                 <outlet property="entryNameLabel" destination="VvV-Xh-tdB" id="cFQ-Ye-oXn"/>
             </connections>
             <point key="canvasLocation" x="213.768115942029" y="79.6875"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="magic-wand" width="512" height="512"/>
+        <image name="wand" width="256" height="256"/>
     </resources>
 </document>
